--- a/index.html
+++ b/index.html
@@ -17,12 +17,13 @@
             <li><a href="https://khush5476.github.io/Stopwatch/">Stopwatch</a></li>
             <li><a href="https://khush5476.github.io/TicTacToe/">TicTacToe</a></li>
             <li><a href="https://khush5476.github.io/RPS/">RPS</a></li>
+            <li><a href="https://khush5476.github.io/Weather/">Weather</a></li>
         </ul>
     </nav>
 
     <br>
     <div id="calculator">
-        <input id="display" readonly>
+        <input type="text" id="display">
         <div id="keys">
             <button onclick="appendToDisplay('+')" class="operator">+</button>
             <button onclick="appendToDisplay('7')">7</button>
