--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
             <li><a href="https://khush5476.github.io/TicTacToe/">TicTacToe</a></li>
             <li><a href="https://khush5476.github.io/RPS/">RPS</a></li>
             <li><a href="https://khush5476.github.io/Weather/">Weather</a></li>
+            <li><a href="https://khush5476.github.io/Email/">Email</a></li>
         </ul>
     </nav>
 
     <br>
     <div id="calculator">
-        <input type="text" id="display">
+        <input type="text" placeholder="Enter a Number" id="display">
         <div id="keys">
             <button onclick="appendToDisplay('+')" class="operator">+</button>
             <button onclick="appendToDisplay('7')">7</button>
